--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,7 @@
 title: About Me
 ---
 
-[<img src="images/muzeeb.jpg" style="max-width:30%;min-width:60px;float:right;" />]
+[<img src="images/muzeeb.jpg" style="max-width:30%;min-width:60px;float:right;" />](https://muzeeb-shaik.github.io/)
 
 
 Hi. 
