--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -4,11 +4,12 @@ title: Teaching
 
 &nbsp;
 
-## <u>Texas A&M University</u>
-
+## Texas A&M University
+- Marketing Analytics (Undergraduate) 
+  - Fall 2020 (scheduled)
 &nbsp;
 
-## <u>Texas Tech University</u>
+## Texas Tech University
 
 - Teaching Assistant: Engineering Economic Analysis (IE2324)
   - Spring 2015, Fall 2015 & Spring 2016
