--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -8,14 +8,14 @@ output:
 ---
 ***
 
-## <u>Texas A&M University</u>
+### <u>Texas A&M University</u>
 - Instructor: Marketing Analytics (Undergraduate) 
   - Fall 2020 (scheduled)
 - Teaching Assistant: Marketing Management (MBA) 
   - Fall 2019 
 &nbsp;
 
-## <u>Texas Tech University</u>
+### <u>Texas Tech University</u>
 
 - Teaching Assistant: Engineering Economic Analysis (IE2324)
   - Spring 2015, Fall 2015 and Spring 2016
